--- a/back-end/public/assets/css/style.css
+++ b/back-end/public/assets/css/style.css
@@ -14851,4 +14851,16 @@ table.footable-paging-center > tfoot > tr.footable-paging > td {
   .add-task-card .to-do-list h6 span {
     display: inline-block; } }
 
+
+
+    /*login btn*/
+
+    #login_btn{
+      display: absolute;
+      width:30%;
+      border-radius: 20px;
+      text-align: center;
+      justify-content: center;
+    }
+
 /*# sourceMappingURL=style.css.map */
